-- HTML Module
-- Type-safe HTML templating

-- HTML node type
type Html =
    | Text String           -- Escaped text content
    | Raw String            -- Raw unescaped HTML
    | Element String (List (String, String)) (List Html)  -- tag, attrs, children
    | Empty                 -- Nothing to render

-- ============================================================================
-- Core Constructors
-- ============================================================================

-- Create escaped text node
let text s = Text (html_escape s)

-- Create raw HTML (not escaped - use with caution!)
let raw s = Raw s

-- Create an element
let el tag attrs children = Element tag attrs children

-- Empty node (renders nothing)
let empty = Empty

-- ============================================================================
-- Common Elements
-- ============================================================================

-- Document structure
let html attrs children = el "html" attrs children
let head attrs children = el "head" attrs children
let body attrs children = el "body" attrs children
let title t = el "title" [] [text t]
let meta attrs = el "meta" attrs []
let link attrs = el "link" attrs []
let script attrs content = el "script" attrs [raw content]
let style attrs content = el "style" attrs [raw content]

-- Container elements
let div attrs children = el "div" attrs children
let span attrs children = el "span" attrs children
let section attrs children = el "section" attrs children
let article attrs children = el "article" attrs children
let header attrs children = el "header" attrs children
let footer attrs children = el "footer" attrs children
let nav attrs children = el "nav" attrs children
let main attrs children = el "main" attrs children
let aside attrs children = el "aside" attrs children

-- Text elements
let h1 attrs children = el "h1" attrs children
let h2 attrs children = el "h2" attrs children
let h3 attrs children = el "h3" attrs children
let h4 attrs children = el "h4" attrs children
let h5 attrs children = el "h5" attrs children
let h6 attrs children = el "h6" attrs children
let p attrs children = el "p" attrs children
let pre attrs children = el "pre" attrs children
let code attrs children = el "code" attrs children
let blockquote attrs children = el "blockquote" attrs children
let em attrs children = el "em" attrs children
let strong attrs children = el "strong" attrs children
let small attrs children = el "small" attrs children

-- Lists
let ul attrs children = el "ul" attrs children
let ol attrs children = el "ol" attrs children
let li attrs children = el "li" attrs children

-- Links and media
let a attrs children = el "a" attrs children
let img attrs = el "img" attrs []
let video attrs children = el "video" attrs children
let audio attrs children = el "audio" attrs children

-- Forms
let form attrs children = el "form" attrs children
let input attrs = el "input" attrs []
let button attrs children = el "button" attrs children
let textarea attrs content = el "textarea" attrs [text content]
let select attrs children = el "select" attrs children
let option attrs t = el "option" attrs [text t]
let label attrs children = el "label" attrs children

-- Table elements
let table attrs children = el "table" attrs children
let thead attrs children = el "thead" attrs children
let tbody attrs children = el "tbody" attrs children
let tfoot attrs children = el "tfoot" attrs children
let tr attrs children = el "tr" attrs children
let th attrs children = el "th" attrs children
let td attrs children = el "td" attrs children

-- Other
let br = el "br" [] []
let hr = el "hr" [] []

-- ============================================================================
-- Attribute Helpers
-- ============================================================================

-- Common attribute builders
let attr name value = (name, value)
let class_ c = ("class", c)
let id_ i = ("id", i)
let href h = ("href", h)
let src s = ("src", s)
let alt a = ("alt", a)
let type_ t = ("type", t)
let name n = ("name", n)
let value v = ("value", v)
let placeholder pl = ("placeholder", pl)
let disabled = ("disabled", "disabled")
let checked = ("checked", "checked")
let required = ("required", "required")
let readonly = ("readonly", "readonly")

-- Style attribute
let style_ s = ("style", s)

-- Data attributes
let data n v = ("data-" ++ n, v)

-- Event handlers (for client-side JS)
let onClick handler = ("onclick", handler)
let onSubmit handler = ("onsubmit", handler)
let onChange handler = ("onchange", handler)

-- ============================================================================
-- Rendering
-- ============================================================================

-- Self-closing tags
let is_void_element tag =
    match tag with
    | "area" -> true
    | "base" -> true
    | "br" -> true
    | "col" -> true
    | "embed" -> true
    | "hr" -> true
    | "img" -> true
    | "input" -> true
    | "link" -> true
    | "meta" -> true
    | "param" -> true
    | "source" -> true
    | "track" -> true
    | "wbr" -> true
    | _ -> false
    end

-- Render attributes to string
let render_attrs attrs =
    if null attrs then ""
    else
        let render_attr (n, v) =
            " " ++ n ++ "=\"" ++ html_escape v ++ "\""
        in
        string_join "" (map render_attr attrs)

-- Render HTML to string
let rec render h =
    match h with
    | Empty -> ""
    | Text s -> s
    | Raw s -> s
    | Element tag attrs children ->
        let attrs_str = render_attrs attrs in
        if is_void_element tag then
            "<" ++ tag ++ attrs_str ++ " />"
        else
            let children_str = string_join "" (map render children) in
            "<" ++ tag ++ attrs_str ++ ">" ++ children_str ++ "</" ++ tag ++ ">"
    end

-- Render with doctype
let renderDocument h =
    "<!DOCTYPE html>\n" ++ render h

-- ============================================================================
-- Higher-Order Helpers
-- ============================================================================

-- Map a function over items, creating HTML for each
let mapItems f items =
    map f items

-- Create a list from items
let list tag attrs items toHtml =
    el tag attrs (map toHtml items)

-- Conditional rendering
let when condition h =
    if condition then h else Empty

-- Render one of two options
let ifThenElse condition thenHtml elseHtml =
    if condition then thenHtml else elseHtml

-- Maybe render
let maybe opt toHtml =
    match opt with
    | Some x -> toHtml x
    | None -> Empty
    end

-- ============================================================================
-- Common Patterns
-- ============================================================================

-- Simple link
let link_ href_ t = a [href href_] [text t]

-- Image with alt text
let img_ src_ alt_ = img [src src_, alt alt_]

-- Button with text
let button_ attrs t = button attrs [text t]

-- Input with common attributes
let textInput name_ placeholder_ =
    input [type_ "text", name name_, placeholder placeholder_]

let passwordInput name_ placeholder_ =
    input [type_ "password", name name_, placeholder placeholder_]

let emailInput name_ placeholder_ =
    input [type_ "email", name name_, placeholder placeholder_]

let submitButton t =
    input [type_ "submit", value t]

-- ============================================================================
-- Page Templates
-- ============================================================================

-- Basic HTML5 page structure
let page title_ bodyContent =
    html [] [
        head [] [
            meta [("charset", "UTF-8")],
            meta [("name", "viewport"), ("content", "width=device-width, initial-scale=1.0")],
            title title_
        ],
        body [] bodyContent
    ]

-- Page with inline styles
let styledPage title_ styles bodyContent =
    html [] [
        head [] [
            meta [("charset", "UTF-8")],
            meta [("name", "viewport"), ("content", "width=device-width, initial-scale=1.0")],
            title title_,
            style [] styles
        ],
        body [] bodyContent
    ]
