-- HTTP Module
-- Types and parsing for HTTP protocol

-- HTTP Method
type HttpMethod =
    | GET
    | POST
    | PUT
    | DELETE
    | PATCH
    | HEAD
    | OPTIONS
    | CONNECT
    | TRACE

-- HTTP Version
type HttpVersion =
    | Http10
    | Http11

-- HTTP Request
type HttpRequest = {
    method : HttpMethod,
    path : String,
    version : HttpVersion,
    headers : List (String, String),
    body : String
}

-- HTTP Response
type HttpResponse = {
    version : HttpVersion,
    status : Int,
    reason : String,
    headers : List (String, String),
    body : String
}

-- ============================================================================
-- HTTP Parsing
-- ============================================================================

-- Parse HTTP method from string
let parse_method s =
    match s with
    | "GET" -> Some GET
    | "POST" -> Some POST
    | "PUT" -> Some PUT
    | "DELETE" -> Some DELETE
    | "PATCH" -> Some PATCH
    | "HEAD" -> Some HEAD
    | "OPTIONS" -> Some OPTIONS
    | "CONNECT" -> Some CONNECT
    | "TRACE" -> Some TRACE
    | _ -> None
    end

-- Parse HTTP version
let parse_version s =
    match s with
    | "HTTP/1.0" -> Some Http10
    | "HTTP/1.1" -> Some Http11
    | _ -> None
    end

-- Split string on first occurrence of delimiter
let split_first delim s =
    match string_index_of delim s with
    | None -> None
    | Some idx ->
        let before = string_substring 0 idx s in
        let after = string_substring (idx + string_length delim) (string_length s) s in
        Some (before, after)
    end

-- Parse a single header line "Key: Value"
let parse_header_line line =
    match split_first ": " line with
    | None ->
        (match split_first ":" line with
        | None -> None
        | Some (key, value) -> Some (string_trim key, string_trim value)
        end)
    | Some (key, value) -> Some (key, string_trim value)
    end

-- Parse headers from lines
let rec parse_headers lines =
    match lines with
    | [] -> []
    | line :: rest ->
        if string_length (string_trim line) == 0 then
            []  -- Empty line ends headers
        else
            (match parse_header_line line with
            | None -> parse_headers rest
            | Some header -> header :: parse_headers rest
            end)
    end

-- Parse HTTP request from raw string
let parseRequest raw =
    -- Split into lines
    let lines = string_split "\r\n" raw in
    (match lines with
    | [] -> None
    | request_line :: rest ->
        -- Parse request line: "GET /path HTTP/1.1"
        let parts = string_split " " request_line in
        (match parts with
        | [method_str, path, version_str] ->
            (match parse_method method_str with
            | None -> None
            | Some method ->
                (match parse_version version_str with
                | None -> None
                | Some version ->
                    -- Find the blank line separating headers from body
                    let rec split_headers_body acc remaining =
                        (match remaining with
                        | [] -> (reverse acc, "")
                        | line :: rest2 ->
                            if string_length (string_trim line) == 0 then
                                (reverse acc, string_join "\r\n" rest2)
                            else
                                split_headers_body (line :: acc) rest2
                        end)
                    in
                    let (header_lines, body) = split_headers_body [] rest in
                    let headers = parse_headers header_lines in
                    Some (HttpRequest {
                        method = method,
                        path = path,
                        version = version,
                        headers = headers,
                        body = body
                    })
                end)
            end)
        | _ -> None
        end)
    end)

-- ============================================================================
-- HTTP Formatting
-- ============================================================================

-- Format method as string
let format_method m =
    match m with
    | GET -> "GET"
    | POST -> "POST"
    | PUT -> "PUT"
    | DELETE -> "DELETE"
    | PATCH -> "PATCH"
    | HEAD -> "HEAD"
    | OPTIONS -> "OPTIONS"
    | CONNECT -> "CONNECT"
    | TRACE -> "TRACE"
    end

-- Format version as string
let format_version v =
    match v with
    | Http10 -> "HTTP/1.0"
    | Http11 -> "HTTP/1.1"
    end

-- Format headers
let format_headers headers =
    let format_header (name, value) = name ++ ": " ++ value in
    string_join "\r\n" (map format_header headers)

-- Format HTTP response as string
val formatResponse : HttpResponse -> String
let formatResponse response =
    let status_line = format_version response.version ++ " "
        ++ int_to_string response.status ++ " "
        ++ response.reason in
    let headers_str = format_headers response.headers in
    status_line ++ "\r\n" ++ headers_str ++ "\r\n\r\n" ++ response.body

-- Format HTTP request as string
val formatRequest : HttpRequest -> String
let formatRequest request =
    let request_line = format_method request.method ++ " "
        ++ request.path ++ " "
        ++ format_version request.version in
    let headers_str = format_headers request.headers in
    request_line ++ "\r\n" ++ headers_str ++ "\r\n\r\n" ++ request.body
